# llm-router

./: .gitignore  Dockerfile  LICENSE  README.md  config.example.yaml  pyproject.toml  pyrightconfig.json
app/: commands.py  config.py  fallback.py  learner.py  main.py  metadata.py  performance.py  providers.py  proxy.py  router.py  translator.py
llm_router/: __main__.py  commands.py  config.py  fallback.py  learner.py  main.py  metadata.py  providers.py  proxy.py  router.py  stats.py  translator.py
migrations/: json_to_yaml.py
tests/: test_commands.py  test_config.py  test_fallback.py  test_learner.py  test_migration.py  test_providers.py  test_proxy_fixes.py  test_router.py  test_stats.py  test_tier_fallback.py  test_translator.py
