[project]
name = "llm-router"
version = "1.0.0"
description = "LLM Router — intelligent model routing proxy"
requires-python = ">=3.11"
license = {text = "MIT"}
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.30.0",
    "ruamel.yaml>=0.18",
]

[project.scripts]
llm-router = "llm_router.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["llm_router*"]

[tool.pyright]
extraPaths = ["migrations"]
